# finetuning-and-alignment

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
data/: README.md
implementations/distributed_demos/: utils.py
implementations/instruction_tuning_demo/: README.md
implementations/peft/: README.md  custom_lightning_module.py
implementations/supervised_finetuning/: README.md  supervised_finetuning.ipynb
reference_implementations/distributed_demos/: README.md  data.py  dist_demo.py
reference_implementations/instruction_tuning_demo/: instruct_tune_demo.ipynb
reference_implementations/peft/: peft_demo.ipynb
reference_implementations/quantization/: README.md  quantization.ipynb
reference_implementations/reference_impelementation_2/: README.md
reference_implementations/supervised_finetuning/: supervised_finetuning.ipynb
utils/: README.md  preprocess_imdb_dataset.py
