[tool.poetry]
name = "bootcamp-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80
lint.select = ["ALL"]
lint.ignore = [
    "ANN101",
    "FBT",
    "D100",
    "PTH",
    "TCH002",
    "S101",
    "N817",
    "TCH001",
    "E731",
    "PLR0913",
    "T201",
    "INP001"
